force-app/main/default/objects/Skill_Tag__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Additional context about the skill</description>
    <label>Description</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>