force-app/main/default/objects/Skill_Tag__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Active Skill</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>