force-app/main/default/objects/Skill_Tag__c/fields/Related_User__c.field-meta.xml
<CustomField>
    <fullName>Related_User__c</fullName>
    <label>Related User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SkillTags</relationshipName>
    <type>Lookup</type>
</CustomField>