force-app/main/default/objects/Skill_Tag__c/fields/Skill_Level__c.field-meta.xml
<CustomField>
    <fullName>Skill_Level__c</fullName>
    <label>Skill Level</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>