force-app/main/default/objects/Skill_Tag__c/fields/Skill_Type__c.field-meta.xml
<CustomField>
    <fullName>Skill_Type__c</fullName>
    <description>Categorizes skill type for matching</description>
    <label>Skill Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Industry</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>